# simulation_engineeringclub

./: README.md
asket_ec_sim_ws/: build.sh
asket_ec_sim_ws/src/asket_ec_control/: package.xml  setup.cfg  setup.py
asket_ec_sim_ws/src/asket_ec_control/asket_ec_control/: differential_drive_node.py
asket_ec_sim_ws/src/asket_ec_control/launch/: control.launch.py
asket_ec_sim_ws/src/asket_ec_description/: CMakeLists.txt  package.xml
asket_ec_sim_ws/src/asket_ec_description/urdf/: asket_ec.sdf
asket_ec_sim_ws/src/asket_ec_gazebo/: CMakeLists.txt  package.xml
asket_ec_sim_ws/src/asket_ec_gazebo/config/: ros_gz_bridge.yaml
asket_ec_sim_ws/src/asket_ec_gazebo/launch/: asket_ec_full.launch.py  beatnaut_full.launch.py  simulation.launch.py
asket_ec_sim_ws/src/asket_ec_gazebo/worlds/: asket_ec_world.sdf
asket_ec_sim_ws/src/asket_ec_sim2d/: package.xml  setup.cfg  setup.py
asket_ec_sim_ws/src/asket_ec_sim2d/asket_ec_sim2d/: keyboard_teleop_node.py  lidar_simulator_node.py  mission_manager.py  nav_to_pid.py  pid_controller.py  sim_bridge_node.py  simple_navigator_node.py  simulator_node.py  waypoint_navigator_node.py
asket_ec_sim_ws/src/asket_ec_sim2d/config/: buoys.yaml  obstacles.yaml  sim2d.rviz
asket_ec_sim_ws/src/asket_ec_sim2d/launch/: njord_sim.launch.py  sim2d.launch.py
